// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should not render with invalid styles when also passed the disabled prop 1`] = `
.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<span
  class="circuit-4"
  disabled=""
  for="select_6"
>
  <div
    class="circuit-3"
  >
    <select
      aria-invalid="true"
      class="circuit-0"
      disabled=""
      id="select_6"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;

exports[`Select should render with a label 1`] = `
.circuit-5 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-4 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1::-ms-expand {
  display: none;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-2 {
  display: none;
}

.circuit-3 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-3 {
  display: none;
}

<label
  class="circuit-5"
  for="select_2"
>
  <span
    class="circuit-0"
  >
    Label
  </span>
  <div
    class="circuit-4"
  >
    <select
      class="circuit-1"
      id="select_2"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-3"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with a prefix when passed the prefix prop 1`] = `
.circuit-5 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-4 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-4,
label + .circuit-4 {
  margin-top: 4px;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-2 {
  display: none;
}

.circuit-3 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-3 {
  display: none;
}

.circuit-0 {
  display: block;
  position: absolute;
  top: 1px;
  left: 1px;
  z-index: 21;
  height: 40px;
  width: 40px;
  padding: 12px;
  pointer-events: none;
}

.circuit-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding-left: 40px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1::-ms-expand {
  display: none;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

<span
  class="circuit-5"
  for="select_10"
>
  <div
    class="circuit-4"
  >
    <div
      class="circuit-0"
      style="width: 24px; height: 24px;"
    />
    <select
      class="circuit-1"
      id="select_10"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-3"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;

exports[`Select should render with a tooltip when passed a validation hint 1`] = `
.circuit-5 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-top: 4px;
  color: #333333;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<span
  class="circuit-5"
  for="select_9"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      id="select_9"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
  <span
    class="circuit-4"
  >
    This field is required.
  </span>
</span>
`;

exports[`Select should render with a visually-hidden label 1`] = `
.circuit-5 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-1::-ms-expand {
  display: none;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-2 {
  display: none;
}

.circuit-3 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-3 {
  display: none;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  color: #000000;
  display: block;
  position: relative;
}

<label
  class="circuit-5"
  for="select_3"
>
  <span
    class="circuit-0"
  >
    Label
  </span>
  <div
    class="circuit-4"
  >
    <select
      class="circuit-1"
      id="select_3"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-3"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</label>
`;

exports[`Select should render with default styles 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

<span
  class="circuit-4"
  for="select_1"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      id="select_1"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;

exports[`Select should render with disabled styles when passed the disabled prop 1`] = `
.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  margin-bottom: 16px;
}

<span
  class="circuit-4"
  disabled=""
  for="select_4"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      disabled=""
      id="select_4"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;

exports[`Select should render with inline styles when passed the inline prop 1`] = `
.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  display: inline-block;
  margin-right: 16px;
  margin-bottom: 16px;
  display: inline-block;
}

<span
  class="circuit-4"
  for="select_7"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      id="select_7"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;

exports[`Select should render with invalid styles when passed the invalid prop 1`] = `
.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  margin-bottom: 16px;
}

.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding-right: 56px;
  box-shadow: 0 0 0 1px #D23F47;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #B22426;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #D23F47;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #D23F47;
}

<span
  class="circuit-4"
  for="select_5"
>
  <div
    class="circuit-3"
  >
    <select
      aria-invalid="true"
      class="circuit-0"
      id="select_5"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;

exports[`Select should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-3 {
  color: #000000;
  display: block;
  position: relative;
}

label .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  background-color: #FFF;
  outline: none;
  border: 0;
  border-radius: 8px;
  box-shadow: none;
  color: #000000;
  margin: 0;
  padding-top: calc(8px + 1px);
  padding-right: 32px;
  padding-bottom: calc(8px + 1px);
  padding-left: 12px;
  position: relative;
  width: 100%;
  z-index: 20;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out, padding 120ms ease-in-out;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0 0 0 1px #999999;
}

.circuit-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.circuit-0::-ms-expand {
  display: none;
}

.circuit-0:hover {
  box-shadow: 0 0 0 1px #333333;
}

.circuit-0:focus {
  box-shadow: 0 0 0 2px #3063E9;
}

.circuit-0:active {
  box-shadow: 0 0 0 1px #3063E9;
}

.circuit-1 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:active ~ .circuit-1 {
  display: none;
}

.circuit-2 {
  color: #333333;
  display: block;
  z-index: 21;
  pointer-events: none;
  position: absolute;
  height: 40px;
  width: 40px;
  top: 1px;
  right: 1px;
  padding: 12px;
}

select:not(:active) ~ .circuit-2 {
  display: none;
}

.circuit-4 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

<span
  class="circuit-4"
  for="select_8"
>
  <div
    class="circuit-3"
  >
    <select
      class="circuit-0"
      id="select_8"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
      <option
        value="3"
      >
        Option 3
      </option>
    </select>
    <svg
      class="circuit-1"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 6l4 4 4-4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    <svg
      class="circuit-2"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 10l4-4 4 4"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</span>
`;
